# ember_pc

./: .ai-code-verify.json  .cursorrules  .gitignore  AGENTS.md  Makefile  README.en.md  README.md  RELEASE_NOTES.en.md  RELEASE_NOTES.md  eslint.config.js  forge.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.electron.json  tsconfig.json  vite.config.ts
.cursor/: runtime-profile.json
.github/: repository-metadata.md
.specify/: feature.json  init-options.json
docs/: README.md  uiagent需求.md  竞品分析-TestMuAI-借鉴需求文档.md
electron/: appServerHost.test.ts  appServerHost.ts  deviceAutomationSidecar.ts  hostCommands.test.ts  hostCommands.ts  ipcChannels.test.ts  ipcChannels.ts  main.ts  mainWindowOptions.test.ts  mainWindowOptions.ts  preload.test.ts  preload.ts  productIdentity.ts  updateHost.test.ts  updateHost.ts  updateNotificationWindowUrl.test.ts  updateNotificationWindowUrl.ts
ember-rs/: Cargo.toml  Info.plist  install-local.sh
ember-rs/crates/agent/: Cargo.toml
ember-rs/crates/agent/src/: artifact_protocol.rs  ask_bridge.rs  aster_runtime_support.rs  aster_state.rs  aster_state_support.rs  credential_bridge.rs  durable_memory_fs.rs  event_converter.rs  lib.rs  mcp_bridge.rs  protocol.rs  protocol_projection.rs  request_tool_policy.rs  runtime_queue.rs  session_execution_runtime.rs  session_store.rs  session_store_message_projection.rs  session_store_runtime_detail.rs  session_store_runtime_projection.rs  session_store_subagent_context.rs  session_store_tests.rs  session_store_todo_projection.rs  session_store_types.rs  skill_execution.rs  subagent_scheduler.rs  tool_io_offload.rs  write_artifact_events.rs
ember-rs/crates/agent/src/agent_tools/: catalog.rs  execution.rs  inventory.rs
ember-rs/crates/agent/src/prompt/: builder.rs  instruction_discovery.rs  runtime_agents.rs  templates.rs
ember-rs/crates/agent/src/tools/: skill_tool_gate.rs
ember-rs/crates/agent/tests/: real_codex_tool_events.rs  windows_shell_runtime.rs
ember-rs/crates/app-server/: Cargo.toml
ember-rs/crates/app-server/src/: capability.rs  file_checkpoint.rs  gateway_tunnel.rs  knowledge_builder_runtime.rs  local_data_source.rs  main.rs  media_task.rs  runtime.rs  runtime_backend.rs  runtime_factory.rs
ember-rs/crates/app-server/src/local_data_source/: agent_apps.rs  automation.rs  channels.rs  connect.rs  current_timeline.rs  device_explore.rs  device_flow.rs  diagnostics.rs  gallery_materials.rs  knowledge.rs  mcp.rs  model_providers.rs  perf_monitor.rs  perf_trace.rs  project_materials.rs  session_files.rs  session_objectives.rs  test_cases.rs  tests.rs  unified_memory.rs  usage_stats.rs  voice_asr_credentials.rs  voice_instructions.rs  workspaces.rs
ember-rs/crates/app-server/src/local_data_source/agent_apps/: package.rs
ember-rs/crates/app-server/src/local_data_source/automation/: health.rs
ember-rs/crates/app-server/src/local_data_source/diagnostics/: support_bundle.rs
ember-rs/crates/app-server/src/local_data_source/skills/: catalog.rs  common.rs  local.rs  management.rs  marketplace.rs  package.rs  workspace.rs
ember-rs/crates/app-server/src/local_data_source/skills/package/: archive.rs
ember-rs/crates/app-server/src/local_data_source/skills/package/archive/: export.rs
ember-rs/crates/app-server/src/processor/: device_explore.rs  device_flow.rs  mod.rs  perf_monitor.rs  perf_trace.rs  test_cases.rs
ember-rs/crates/app-server/src/runtime/: agent_apps.rs  exports.rs  tests.rs
ember-rs/crates/app-server/src/runtime/exports/: files.rs  metrics.rs
ember-rs/crates/app-server/src/runtime_backend/: tests.rs
ember-rs/crates/app-server/tests/: host_boundary_guard.rs  session_archive_jsonrpc.rs
ember-rs/crates/config/: Cargo.toml
ember-rs/crates/config/src/: lib.rs
ember-rs/crates/config/src/observer/: manager.rs  observers.rs  subject.rs  traits.rs
ember-rs/crates/ember-cli/: Cargo.toml
ember-rs/crates/ember-cli/src/: catalog.rs  main.rs  video.rs
ember-rs/crates/gateway/: Cargo.toml
ember-rs/crates/gateway/src/: discord.rs  feishu.rs  telegram.rs  tunnel.rs
ember-rs/crates/gateway/src/wechat/: api.rs  media.rs  runtime.rs
ember-rs/crates/processor/: Cargo.toml
ember-rs/crates/processor/src/: lib.rs  processor.rs
ember-rs/crates/processor/src/steps/: auth.rs  injection.rs  plugin.rs  provider.rs  registry.rs  routing.rs  telemetry.rs  traits.rs
ember-rs/crates/server/: Cargo.toml
ember-rs/crates/server-utils/: Cargo.toml
ember-rs/crates/server-utils/src/: lib.rs
ember-rs/crates/server/src/: chrome_bridge.rs  client_detector.rs  lib.rs
ember-rs/crates/server/src/handlers/: api.rs  chrome_bridge_ws.rs  image_api_provider.rs  image_handler.rs  provider_calls.rs  websocket.rs
ember-rs/crates/skills/: Cargo.toml
ember-rs/crates/skills/src/: ember_llm_provider.rs  lib.rs  skill_loader.rs  skill_matcher.rs
homebrew/: README.md
internal/: README.md
public/: oem-runtime-config.js
scripts/: README.md  agentui-ttft-live-sample.mjs  agentui-ttft-sample-matrix.mjs  ai-code-verify.ts  app-version.mjs  at-command-registry-e2e.mjs  automation-current-smoke.mjs  browser-runtime-smoke.mjs  check-app-server-client-contract.mjs  check-app-version-consistency.mjs  check-command-contracts.mjs  check-dev-bridge-health.mjs  check-doc-freshness.mjs  check-docs-boundary.mjs  check-file-size-governance.mjs  check-generated-slop-report.mjs  check-harness-contracts.mjs  check-import-boundaries.mjs  check-modality-runtime-contracts.mjs  check-rust-layer-budget.test.mjs  chrome-bridge-e2e.mjs  claw-chat-ready-streaming-smoke.mjs  code-runtime-fixture-smoke.mjs  connect-deep-link-current-smoke.mjs  connect-deep-link-save-current-smoke.mjs  connect-open-deep-link-current-smoke.mjs  design-canvas-smoke.mjs  ensure-dev-port.mjs  generate-extension-site-adapter-runners.mjs  generate-protocol-types.mjs  generate-tray-icons.mjs  governance-graph.mjs  knowledge-current-smoke.mjs  knowledge-gui-smoke.mjs  knowledge-legacy-fallback-report.mjs  knowledge-product-e2e.mjs  knowledge-provider-e2e.mjs  layered-design-local-vision-model-slot-endpoint.py  (+41 more)
(+2243 files in other folders)
