[package]
name = "ember-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ember-core.workspace = true
ember-mcp.workspace = true
ember-services.workspace = true
ember-providers.workspace = true
ember-skills.workspace = true
aster.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true
rusqlite.workspace = true
uuid.workspace = true
thiserror.workspace = true
regex.workspace = true
anyhow.workspace = true
async-stream.workspace = true

[dev-dependencies]
tempfile.workspace = true
