[package]
name = "ember-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ember-core.workspace = true
ember-agent.workspace = true
ember-websocket.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true
rand.workspace = true
dirs.workspace = true
md5.workspace = true
hex.workspace = true

tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
axum.workspace = true
urlencoding.workspace = true
rusqlite.workspace = true
aes = "0.8"
ecb = "0.1"

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
