[package]
name = "ember-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ember-core.workspace = true
ember-providers.workspace = true
ember-services.workspace = true
ember-server-utils.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
